--- a/RU/index_RU.html
+++ b/RU/index_RU.html
@@ -649,7 +649,7 @@
 									<div class="side-mob__num">1</div>
 									<div class="side-mob__icon">
 										<div class="side-mob__icon-ibg side-mob__icon-ibg_contain">
-											<img src="img/info/how-aplication.svg" alt="іконка">
+											<img src="../../Water-Delivery/img/info/how-aplication.svg" alt="іконка">
 										</div>
 									</div>
 								</li>
@@ -673,7 +673,7 @@
 									<div class="side-mob__num">2</div>
 									<div class="side-mob__icon">
 										<div class="side-mob__icon-ibg side-mob__icon-ibg_contain">
-											<img src="img/info/how-confirmation.svg" alt="іконка">
+											<img src="../../Water-Delivery/img/info/how-confirmation.svg" alt="іконка">
 										</div>
 									</div>
 								</li>
@@ -697,7 +697,7 @@
 									<div class="side-mob__num">3</div>
 									<div class="side-mob__icon">
 										<div class="side-mob__icon-ibg side-mob__icon-ibg_contain">
-											<img src="img/info/how-delivery.svg" alt="іконка">
+											<img src="../../Water-Delivery/img/info/how-delivery.svg" alt="іконка">
 										</div>
 									</div>
 								</li>
@@ -707,31 +707,31 @@
 							<ul class="how-work__items">
 								<li class="how-work__item how-work__item-content">
 									<div class="how-work__icon-ibg how-work__icon-ibg_contain">
-										<img src="img/info/how-aplication.svg" alt="іконка">
+										<img src="../../Water-Delivery/img/info/how-aplication.svg" alt="іконка">
 									</div>
 									<h4 class="how-work__subtitle">Заявка</h4>
 									<div class="how-work__text">Вы можете заказать обратный звонок, заполнить форму заказа или просто позвонить к нам</div>
 								</li>
 								<li class="how-work__item how-work__item-arrow">
 									<div class="how-work__arrow-next-ibg">
-										<img src="img/info/next-arrow.svg" alt="іконка">
+										<img src="../../Water-Delivery/img/info/next-arrow.svg" alt="іконка">
 									</div>
 								</li>
 								<li class="how-work__item how-work__item-content">
 									<div class="how-work__icon-ibg how-work__icon-ibg_contain">
-										<img src="img/info/how-confirmation.svg" alt="іконка">
+										<img src="../../Water-Delivery/img/info/how-confirmation.svg" alt="іконка">
 									</div>
 									<h4 class="how-work__subtitle">Подтверждение</h4>
 									<div class="how-work__text">Наш специалист выснит точное время и адрес доставки, а также удобную для Вас форму расчета</div>
 								</li>
 								<li class="how-work__item how-work__item-arrow">
 									<div class="how-work__arrow-next-ibg">
-										<img src="img/info/next-arrow.svg" alt="іконка">
+										<img src="../../Water-Delivery/img/info/next-arrow.svg" alt="іконка">
 									</div>
 								</li>
 								<li class="how-work__item how-work__item-content">
 									<div class="how-work__icon-ibg how-work__icon-ibg_contain">
-										<img src="img/info/how-delivery.svg" alt="іконка">
+										<img src="../../Water-Delivery/img/info/how-delivery.svg" alt="іконка">
 									</div>
 									<h4 class="how-work__subtitle">Доставка</h4>
 									<div class="how-work__text">Доставка воды ы других товаров предоставляется<span> бесплатно </span>и в оговоренный срок</div>
@@ -746,27 +746,27 @@
 								<li class="payment__item">
 									<div class="payment__text"><span class="payment__text-bold">Наличными </span>куръеру<span class="payment__text-italic"> во время доставки</span></div>
 									<div class="payment__icon-ibg payment__icon-ibg_contain">
-										<img src="img/info/payment-cash.svg" alt="іконка">
+										<img src="../../Water-Delivery/img/info/payment-cash.svg" alt="іконка">
 									</div>
 								</li>
 								<li class="payment__item">
 									<div class="payment__text"><span class="payment__text-bold">Банковской картой </span>с помощью банковского терминала<span class="payment__text-italic"> во время
 											доставки</span></div>
 									<div class="payment__icon-ibg payment__icon-ibg_contain">
-										<img src="img/info/payment-card.svg" alt="іконка">
+										<img src="../../Water-Delivery/img/info/payment-card.svg" alt="іконка">
 									</div>
 								</li>
 								<li class="payment__item">
 									<div class="payment__text">С помощью приложения<span class="payment__text-bold"> "Приват24" </span><span class="payment__text-italic">при предоплате</span></div>
 									<div class="payment__icon-ibg payment__icon-ibg_contain">
-										<img src="img/info/payment-privat.svg" alt="іконка">
+										<img src="../../Water-Delivery/img/info/payment-privat.svg" alt="іконка">
 									</div>
 								</li>
 								<li class="payment__item">
 									<div class="payment__text">За<span class="payment__text-bold"> безналичным рассчетом </span>для юридических лиц<span class="payment__text-italic"> при предоплате</span>
 									</div>
 									<div class="payment__icon-ibg payment__icon-ibg_contain">
-										<img src="img/info/payment-cashless.svg" alt="іконка">
+										<img src="../../Water-Delivery/img/info/payment-cashless.svg" alt="іконка">
 									</div>
 								</li>
 							</ul>
