--- a/RU/order_RU.html
+++ b/RU/order_RU.html
@@ -34,7 +34,7 @@
 									<button type="button" data-spoller data-spoller-close class="language-select__arrow _icon-lang-arrow"></button>
 									<ul class="language-select__list">
 										<li><a href="../order.html" class="language-select__link">UA</a></li>
-										<li><a href="../order_EN.html" class="language-select__link">EN</a></li>
+										<li><a href="../../Water-Delivery/EN/order_EN.html" class="language-select__link">EN</a></li>
 									</ul>
 								</div>
 							</div>
@@ -74,7 +74,7 @@
 							<button type="button" data-spoller data-spoller-close class="language-select__arrow _icon-lang-arrow"></button>
 							<ul class="language-select__list">
 								<li><a href="../order.html" class="language-select__link">UA</a></li>
-								<li><a href="../order_EN.html" class="language-select__link">EN</a></li>
+								<li><a href="../../Water-Delivery/EN/order_EN.html" class="language-select__link">EN</a></li>
 							</ul>
 						</div>
 					</div>
