--- a/order.html
+++ b/order.html
@@ -34,8 +34,8 @@
 									<div class="language-select__current">UA</div>
 									<button type="button" data-spoller data-spoller-close class="language-select__arrow _icon-lang-arrow"></button>
 									<ul class="language-select__list">
-										<li><a href="../order_EN.html" class="language-select__link">EN</a></li>
-										<li><a href="../order_RU.html" class="language-select__link">RU</a></li>
+										<li><a href="../../Water-Delivery/EN/order_EN.html" class="language-select__link">EN</a></li>
+										<li><a href="../../Water-Delivery/RU/order_RU.html" class="language-select__link">RU</a></li>
 									</ul>
 								</div>
 							</div>
@@ -74,8 +74,8 @@
 							<div class="language-select__current">UA</div>
 							<button type="button" data-spoller data-spoller-close class="language-select__arrow _icon-lang-arrow"></button>
 							<ul class="language-select__list">
-								<li><a href="../order_EN.html" class="language-select__link">EN</a></li>
-								<li><a href="../order_RU.html" class="language-select__link">RU</a></li>
+								<li><a href="../../Water-Delivery/EN/order_EN.html" class="language-select__link">EN</a></li>
+								<li><a href="../../Water-Delivery/RU/order_RU.html" class="language-select__link">RU</a></li>
 							</ul>
 						</div>
 					</div>
