--- a/order.html
+++ b/order.html
@@ -752,7 +752,7 @@
 						<a href="../Water-Delivery/index.html" class="logo-block__logo"><img src="img/footer/logo-grey.svg" alt="logo"></a>
 					</div>
 					<div class="logo-block__copyr">
-						<p>C 2023 AQUA SWIT</p>
+						<p>C 2023 BASHYLOV OLEG</p>
 						<p>ALL RIGHTS RESERVED</p>
 					</div>
 				</div>
