--- a/RU/order_RU.html
+++ b/RU/order_RU.html
@@ -43,8 +43,8 @@
 					<!-- Second column -->
 					<div class="top-header__column top-header__column_center">
 						<!-- Logo -->
-						<a href="../home.html" class="top-header__logo-image">
-							<img src="img/logo.svg" alt="logo">
+						<a href="../../Water-Delivery/index.html" class="top-header__logo-image">
+							<img src="../../Water-Delivery/img/logo.svg" alt="logo">
 						</a>
 					</div>
 					<!-- Third (last) column -->
@@ -748,7 +748,7 @@
 				</div>
 				<div class="footer__logo logo-block">
 					<div class="logo-block__body">
-						<a href="" class="logo-block__logo"><img src="img/footer/logo-grey.svg" alt="logo"></a>
+						<a href="../../Water-Delivery/index.html" class="logo-block__logo"><img src="../../Water-Delivery/img/footer/logo-grey.svg" alt="logo"></a>
 					</div>
 					<div class="logo-block__copyr">
 						<p>C 2023 OLEG BASHYLOV</p>
