--- a/EN/order_EN.html
+++ b/EN/order_EN.html
@@ -53,11 +53,11 @@
 						<!-- Contact phone -->
 						<div class="top-header__phone phone-header">
 							<a href="tel:380441234567" class="phone-header__round-button">
-								<img src="img/header/phone.svg" alt="phone-icon">
+								<img src="../../Water-Delivery/img/header/phone.svg" alt="phone-icon">
 							</a>
 							<div class="phone-header__item">
 								<div class="phone-header__icon">
-									<img src="img/header/24-phone.svg" alt="clock-icon">
+									<img src="../../Water-Delivery/img/header/24-phone.svg" alt="clock-icon">
 								</div>
 								<a href="tel:380441234567" class="phone-header__link">044-123-45-67</a>
 							</div>
