--- a/RU/index_RU.html
+++ b/RU/index_RU.html
@@ -58,7 +58,7 @@
 						<!-- Contact phone -->
 						<div class="top-header__phone phone-header">
 							<a href="tel:380441234567" class="phone-header__round-button">
-								<img src="img/header/phone.svg" alt="phone-icon">
+								<img src="../../Water-Delivery/img/header/phone.svg" alt="phone-icon">
 							</a>
 							<div class="phone-header__item">
 								<div class="phone-header__icon">
