--- a/RU/order_RU.html
+++ b/RU/order_RU.html
@@ -96,7 +96,7 @@
 						<nav class="order__breadcrumbs breadcrumbs">
 							<ul class="breadcrumbs__list">
 								<li class="breadcrumbs__item breadcrumbs__item_uncurrent">
-									<a href="../Water-Delivery/index_RU.html" class="breadcrumbs__link">Главная</a>
+									<a href="index_RU.html" class="breadcrumbs__link">Главная</a>
 								</li>
 								<li class="breadcrumbs__item">
 									<span class="breadcrumbs__current">Заказ воды</span>
