--- a/EN/order_EN.html
+++ b/EN/order_EN.html
@@ -142,7 +142,7 @@
 												<article class="order-product__item" data-id="19-1">
 													<div class="order-product__content">
 														<div class="order-product__image">
-															<picture><source srcset="img/product-catalog/19-1.webp" type="image/webp"><img data-img src="img/product-catalog/19-1.png" alt="Зображення"></picture>
+															<picture><source srcset="../../Water-Delivery/img/product-catalog/19-1.webp" type="image/webp"><img data-img src="../../Water-Delivery/img/product-catalog/19-1.png" alt="Зображення"></picture>
 														</div>
 														<div class="order-product__description">
 															<h4 class="order-product__title">Water Моршинська</h4>
@@ -162,7 +162,7 @@
 												<article class="order-product__item" data-id="19-2">
 													<div class="order-product__content">
 														<div class="order-product__image">
-															<picture><source srcset="img/product-catalog/19-2.webp" type="image/webp"><img data-img src="img/product-catalog/19-2.png" alt="Зображення"></picture>
+															<picture><source srcset="../../Water-Delivery/img/product-catalog/19-2.webp" type="image/webp"><img data-img src="../../Water-Delivery/img/product-catalog/19-2.png" alt="Зображення"></picture>
 														</div>
 														<div class="order-product__description">
 															<h4 class="order-product__title">Water Аляска</h4>
@@ -181,7 +181,7 @@
 												<article class="order-product__item" data-id="19-3">
 													<div class="order-product__content">
 														<div class="order-product__image">
-															<picture><source srcset="img/product-catalog/19-3.webp" type="image/webp"><img data-img src="img/product-catalog/19-3.png" alt="Зображення"></picture>
+															<picture><source srcset="../../Water-Delivery/img/product-catalog/19-3.webp" type="image/webp"><img data-img src="../../Water-Delivery/img/product-catalog/19-3.png" alt="Зображення"></picture>
 														</div>
 														<div class="order-product__description">
 															<h4 class="order-product__title">Water Росяна</h4>
@@ -200,7 +200,7 @@
 												<article class="order-product__item" data-id="19-4">
 													<div class="order-product__content">
 														<div class="order-product__image">
-															<picture><source srcset="img/product-catalog/19-4.webp" type="image/webp"><img data-img src="img/product-catalog/19-4.png" alt="Зображення"></picture>
+															<picture><source srcset="../../Water-Delivery/img/product-catalog/19-4.webp" type="image/webp"><img data-img src="../../Water-Delivery/img/product-catalog/19-4.png" alt="Зображення"></picture>
 														</div>
 														<div class="order-product__description">
 															<h4 class="order-product__title">Water Царичанська</h4>
@@ -227,7 +227,7 @@
 												<article class="order-product__item" data-id="6-1">
 													<div class="order-product__content">
 														<div class="order-product__image">
-															<picture><source srcset="img/product-catalog/6-1.webp" type="image/webp"><img data-img src="img/product-catalog/6-1.png" alt="Зображення"></picture>
+															<picture><source srcset="../../Water-Delivery/img/product-catalog/6-1.webp" type="image/webp"><img data-img src="../../Water-Delivery/img/product-catalog/6-1.png" alt="Зображення"></picture>
 														</div>
 														<div class="order-product__description">
 															<h4 class="order-product__title">Water Моршинська (mineral)</h4>
@@ -246,7 +246,7 @@
 												<article class="order-product__item" data-id="6-2">
 													<div class="order-product__content">
 														<div class="order-product__image">
-															<picture><source srcset="img/product-catalog/6-2.webp" type="image/webp"><img data-img src="img/product-catalog/6-2.png" alt="Зображення"></picture>
+															<picture><source srcset="../../Water-Delivery/img/product-catalog/6-2.webp" type="image/webp"><img data-img src="../../Water-Delivery/img/product-catalog/6-2.png" alt="Зображення"></picture>
 														</div>
 														<div class="order-product__description">
 															<h4 class="order-product__title">Water Моршинська (mineral)</h4>
@@ -265,7 +265,7 @@
 												<article class="order-product__item" data-id="6-3">
 													<div class="order-product__content">
 														<div class="order-product__image">
-															<picture><source srcset="img/product-catalog/6-3.webp" type="image/webp"><img data-img src="img/product-catalog/6-3.png" alt="Зображення"></picture>
+															<picture><source srcset="../../Water-Delivery/img/product-catalog/6-3.webp" type="image/webp"><img data-img src="../../Water-Delivery/img/product-catalog/6-3.png" alt="Зображення"></picture>
 														</div>
 														<div class="order-product__description">
 															<h4 class="order-product__title">Water Росяна</h4>
@@ -284,7 +284,7 @@
 												<article class="order-product__item" data-id="6-4">
 													<div class="order-product__content">
 														<div class="order-product__image">
-															<picture><source srcset="img/product-catalog/6-4.webp" type="image/webp"><img data-img src="img/product-catalog/6-4.png" alt="Зображення"></picture>
+															<picture><source srcset="../../Water-Delivery/img/product-catalog/6-4.webp" type="image/webp"><img data-img src="../../Water-Delivery/img/product-catalog/6-4.png" alt="Зображення"></picture>
 														</div>
 														<div class="order-product__description">
 															<h4 class="order-product__title">Water Моршинська</h4>
@@ -311,7 +311,7 @@
 												<article class="order-product__item" data-id="2-1">
 													<div class="order-product__content">
 														<div class="order-product__image">
-															<picture><source srcset="img/product-catalog/2-1.webp" type="image/webp"><img data-img src="img/product-catalog/2-1.png" alt="Зображення"></picture>
+															<picture><source srcset="../../Water-Delivery/img/product-catalog/2-1.webp" type="image/webp"><img data-img src="../../Water-Delivery/img/product-catalog/2-1.png" alt="Зображення"></picture>
 														</div>
 														<div class="order-product__description">
 															<h4 class="order-product__title">Water Оболонська-2 (non-carbonated)</h4>
@@ -330,7 +330,7 @@
 												<article class="order-product__item" data-id="2-2">
 													<div class="order-product__content">
 														<div class="order-product__image">
-															<picture><source srcset="img/product-catalog/2-2.webp" type="image/webp"><img data-img src="img/product-catalog/2-2.png" alt="Зображення"></picture>
+															<picture><source srcset="../../Water-Delivery/img/product-catalog/2-2.webp" type="image/webp"><img data-img src="../../Water-Delivery/img/product-catalog/2-2.png" alt="Зображення"></picture>
 														</div>
 														<div class="order-product__description">
 															<h4 class="order-product__title">Water Царичанська</h4>
@@ -349,7 +349,7 @@
 												<article class="order-product__item" data-id="2-3">
 													<div class="order-product__content">
 														<div class="order-product__image">
-															<picture><source srcset="img/product-catalog/2-3.webp" type="image/webp"><img data-img src="img/product-catalog/2-3.png" alt="Зображення"></picture>
+															<picture><source srcset="../../Water-Delivery/img/product-catalog/2-3.webp" type="image/webp"><img data-img src="../../Water-Delivery/img/product-catalog/2-3.png" alt="Зображення"></picture>
 														</div>
 														<div class="order-product__description">
 															<h4 class="order-product__title">Water Миргородська Лагідна</h4>
@@ -368,7 +368,7 @@
 												<article class="order-product__item" data-id="2-4">
 													<div class="order-product__content">
 														<div class="order-product__image">
-															<picture><source srcset="img/product-catalog/2-4.webp" type="image/webp"><img data-img src="img/product-catalog/2-4.png" alt="Зображення"></picture>
+															<picture><source srcset="../../Water-Delivery/img/product-catalog/2-4.webp" type="image/webp"><img data-img src="../../Water-Delivery/img/product-catalog/2-4.png" alt="Зображення"></picture>
 														</div>
 														<div class="order-product__description">
 															<h4 class="order-product__title">Water Бон Буасон (mineral)</h4>
@@ -395,7 +395,7 @@
 												<article class="order-product__item" data-id="1-5-1">
 													<div class="order-product__content">
 														<div class="order-product__image">
-															<picture><source srcset="img/product-catalog/1-5-1.webp" type="image/webp"><img data-img src="img/product-catalog/1-5-1.png" alt="Зображення"></picture>
+															<picture><source srcset="../../Water-Delivery/img/product-catalog/1-5-1.webp" type="image/webp"><img data-img src="../../Water-Delivery/img/product-catalog/1-5-1.png" alt="Зображення"></picture>
 														</div>
 														<div class="order-product__description">
 															<h4 class="order-product__title">Water Bon Aqua (non-carbonated)</h4>
@@ -414,7 +414,7 @@
 												<article class="order-product__item" data-id="1-5-2">
 													<div class="order-product__content">
 														<div class="order-product__image">
-															<picture><source srcset="img/product-catalog/1-5-2.webp" type="image/webp"><img data-img src="img/product-catalog/1-5-2.png" alt="Зображення"></picture>
+															<picture><source srcset="../../Water-Delivery/img/product-catalog/1-5-2.webp" type="image/webp"><img data-img src="../../Water-Delivery/img/product-catalog/1-5-2.png" alt="Зображення"></picture>
 														</div>
 														<div class="order-product__description">
 															<h4 class="order-product__title">Water Бон Буасон Лимон</h4>
@@ -433,7 +433,7 @@
 												<article class="order-product__item" data-id="1-5-3">
 													<div class="order-product__content">
 														<div class="order-product__image">
-															<picture><source srcset="img/product-catalog/1-5-3.webp" type="image/webp"><img data-img src="img/product-catalog/1-5-3.png" alt="Зображення"></picture>
+															<picture><source srcset="../../Water-Delivery/img/product-catalog/1-5-3.webp" type="image/webp"><img data-img src="../../Water-Delivery/img/product-catalog/1-5-3.png" alt="Зображення"></picture>
 														</div>
 														<div class="order-product__description">
 															<h4 class="order-product__title">Water Миргородська (soft)</h4>
@@ -452,7 +452,7 @@
 												<article class="order-product__item" data-id="1-5-4">
 													<div class="order-product__content">
 														<div class="order-product__image">
-															<picture><source srcset="img/product-catalog/1-5-4.webp" type="image/webp"><img data-img src="img/product-catalog/1-5-4.png" alt="Зображення"></picture>
+															<picture><source srcset="../../Water-Delivery/img/product-catalog/1-5-4.webp" type="image/webp"><img data-img src="../../Water-Delivery/img/product-catalog/1-5-4.png" alt="Зображення"></picture>
 														</div>
 														<div class="order-product__description">
 															<h4 class="order-product__title">Water Моршинська (soft-carbonated)</h4>
@@ -479,7 +479,7 @@
 												<article class="order-product__item" data-id="0-5-1">
 													<div class="order-product__content">
 														<div class="order-product__image">
-															<picture><source srcset="img/product-catalog/0-5-1.webp" type="image/webp"><img data-img src="img/product-catalog/0-5-1.png" alt="Зображення"></picture>
+															<picture><source srcset="../../Water-Delivery/img/product-catalog/0-5-1.webp" type="image/webp"><img data-img src="../../Water-Delivery/img/product-catalog/0-5-1.png" alt="Зображення"></picture>
 														</div>
 														<div class="order-product__description">
 															<h4 class="order-product__title">Water Карпатська Високогірна (carbonated)</h4>
@@ -498,7 +498,7 @@
 												<article class="order-product__item" data-id="0-5-2">
 													<div class="order-product__content">
 														<div class="order-product__image">
-															<picture><source srcset="img/product-catalog/0-5-2.webp" type="image/webp"><img data-img src="img/product-catalog/0-5-2.png" alt="Зображення"></picture>
+															<picture><source srcset="../../Water-Delivery/img/product-catalog/0-5-2.webp" type="image/webp"><img data-img src="../../Water-Delivery/img/product-catalog/0-5-2.png" alt="Зображення"></picture>
 														</div>
 														<div class="order-product__description">
 															<h4 class="order-product__title">Water Природне Джерело (non-carbonated)</h4>
@@ -517,7 +517,7 @@
 												<article class="order-product__item" data-id="0-5-3">
 													<div class="order-product__content">
 														<div class="order-product__image">
-															<picture><source srcset="img/product-catalog/0-5-3.webp" type="image/webp"><img data-img src="img/product-catalog/0-5-3.png" alt="Зображення"></picture>
+															<picture><source srcset="../../Water-Delivery/img/product-catalog/0-5-3.webp" type="image/webp"><img data-img src="../../Water-Delivery/img/product-catalog/0-5-3.png" alt="Зображення"></picture>
 														</div>
 														<div class="order-product__description">
 															<h4 class="order-product__title">Water Buvette (mineral)</h4>
@@ -536,7 +536,7 @@
 												<article class="order-product__item" data-id="0-5-4">
 													<div class="order-product__content">
 														<div class="order-product__image">
-															<picture><source srcset="img/product-catalog/0-5-4.webp" type="image/webp"><img data-img src="img/product-catalog/0-5-4.png" alt="Зображення"></picture>
+															<picture><source srcset="../../Water-Delivery/img/product-catalog/0-5-4.webp" type="image/webp"><img data-img src="../../Water-Delivery/img/product-catalog/0-5-4.png" alt="Зображення"></picture>
 														</div>
 														<div class="order-product__description">
 															<h4 class="order-product__title">Water Аква (non-carbonated)</h4>
