--- a/RU/index_RU.html
+++ b/RU/index_RU.html
@@ -47,7 +47,7 @@
 					<!-- Second column -->
 					<div class="top-header__column top-header__column_center">
 						<!-- Logo -->
-						<a href="../../Water-Delivery/index.html" class="top-header__logo-image">
+						<a href="../../Water-Delivery/RU/index_RU.html" class="top-header__logo-image">
 							<img src="../../Water-Delivery/img/logo.svg" alt="logo">
 						</a>
 					</div>
